# src/main/java/com/todocine/controller/UsuarioListaController.java
@@ -23,38 +23,5 @@ public class UsuarioListaController {
         return new ResponseEntity<>(listaService.getListas(userId, page), HttpStatus.OK);
     }
 
-    @PostMapping
-    public ResponseEntity<ListaDTO> createLista(@Valid @RequestBody ListaReqDTO listaDTO) {
-        return new ResponseEntity<>(listaService.createLista(listaDTO), HttpStatus.CREATED);
-    }
 
-    @PutMapping("/{id}")
-    public ResponseEntity<ListaDTO> updateLista(@NotNull @PathVariable("id") Long id, @Valid @RequestBody ListaReqDTO listaDTO) {
-        return new ResponseEntity<>(listaService.updateLista(id, listaDTO), HttpStatus.OK);
-    }
-
-    @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteLista(@NotNull @PathVariable("id") Long id) {
-        listaService.deleteLista(id);
-
-        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
-    }
-
-    @PostMapping("/{listaId}/movies/{movieId}")
-    public ResponseEntity<ListaDTO> addMovieToList(
-            @NotNull @PathVariable("listaId") Long listaId,
-            @NotNull @PathVariable("movieId") Long movieId) {
-
-        return new ResponseEntity<>(listaService.addMovieToList(listaId, movieId), HttpStatus.OK);
-    }
-
-    @DeleteMapping("/{listaId}/movies/{movieId}")
-    public ResponseEntity<Void> deleteMovieFromList(
-            @NotNull @PathVariable("listaId") Long listaId,
-            @NotNull @PathVariable("movieId") Long movieId) {
-
-        listaService.deleteMovieFromList(listaId, movieId);
-
-        return new ResponseEntity<>(HttpStatus.NO_CONTENT);
-    }
 }
